grammar.js
    source_file: $ => repeat($._record),

    _record: $ => choice(
      $.problem_record,
      $.input_record,
      $.data_record,
      $.subroutines_record,
      $.model_record,
      $.pk_record,
      $.des_record,
      $.error_record,
      $.pred_record,
      $.theta_record,
      $.omega_record,
      $.sigma_record,
      $.estimation_record,
      $.covariance_record,
      $.table_record,
      $.simulation_record,
      $.abbreviated_record,
      $.sizes_record,
      $.mix_record,
      $.msfi_record,
      $.nonparametric_record,
      $.prior_record,
      $.thetap_record,
      $.thetapv_record,
      $.omegap_record,
      $.omegapd_record,
      $.sigmap_record,
      $.sigmapd_record,
      $.scatter_record,
    ),

    pk_record: $ => seq(
      alias(recordKeyword('PK'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    error_record: $ => seq(
      alias(recordKeyword('ERR', 'ERRO', 'ERROR'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    _statement: $ => choice(
      $.assignment,
      $.if_statement,
      $.block_if,
      $.do_loop,
      $.do_while_loop,
      $.exit_statement,
      $.call_statement,
      $.fortran_line,
    ),

    argument_list: $ => seq($._expression, repeat(seq(',', $._expression))),

    assignment: $ => seq(
      field('target', choice($.identifier, $.indexed_access)),
      '=',
      field('value', $._expression),
    ),

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.function_call,
      $.theta_ref,
      $.eta_ref,
      $.err_ref,
      $.eps_ref,
      $.indexed_access,
      $.identifier,
      $.number,
    ),

    binary_expression: $ => choice(
      // Exponentiation (highest, right-associative)
      prec.right(4, seq(field('left', $._expression), field('operator', alias('**', $.arithmetic_operator)), field('right', $._expression))),
      // Multiplication/Division
      prec.left(3, seq(field('left', $._expression), field('operator', alias('*', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(3, seq(field('left', $._expression), field('operator', alias('/', $.arithmetic_operator)), field('right', $._expression))),
      // Addition/Subtraction
      prec.left(2, seq(field('left', $._expression), field('operator', alias('+', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(2, seq(field('left', $._expression), field('operator', alias('-', $.arithmetic_operator)), field('right', $._expression))),
      // Comparisons (Fortran and C-style)
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.EQ\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.NE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('==', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('/=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<=', $.comparison_operator)), field('right', $._expression))),
      // Logical (lowest)
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.AND\./i)), $.logical_operator)), field('right', $._expression))),
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.OR\./i)), $.logical_operator)), field('right', $._expression))),
    ),

    unary_expression: $ => prec.right(5, choice(
      seq(field('operator', alias('-', $.arithmetic_operator)), field('operand', $._expression)),
      seq(field('operator', alias(/\.NOT\./i, $.logical_operator)), field('operand', $._expression)),
    )),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // External scanner handles function_name with lookahead for (
    // This allows SIN(x) as function_call but SIN alone as identifier
    function_call: $ => seq(
      field('name', $.function_name),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
    ),

    theta_ref: $ => seq(/THETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    eta_ref: $ => seq(/ETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    err_ref: $ => seq(/ERR/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    eps_ref: $ => seq(/EPS/i, '(', field('index', choice($.integer, $.identifier)), ')'),

    indexed_access: $ => seq(
      field('name', $.identifier),
      '(',
      field('indices', $.index_list),
      ')',
    ),

    index_list: $ => seq($._expression, repeat(seq(',', $._expression))),

    theta_record: $ => seq(
      alias(recordKeyword('THE', 'THET', 'THTA', 'THETA'), $.record_keyword),
      repeat($.theta_init),
    ),

    theta_init: $ => seq(
      field('value', choice($.number, $.theta_bounds)),
      optional(field('fixed', $.fix_option)),
    ),

    theta_bounds: $ => seq(
      '(',
      choice(
        // (lower, init, upper)
        seq(
          field('lower', $._theta_bound_value),
          optional(','),
          field('init', $._theta_bound_value),
          optional(','),
          field('upper', $._theta_bound_value),
        ),
        // (lower, init)
        seq(
          field('lower', $._theta_bound_value),
          optional(','),
          field('init', $._theta_bound_value),
        ),
        // (init) only
        field('init', $._theta_bound_value),
      ),
      // FIX inside parens still valid syntax but captured at theta_init level
      optional($.fix_option),
      ')',
    ),

    _theta_bound_value: $ => choice($.number, $.identifier, $.positive_infinity, $.negative_infinity),

    positive_infinity: $ => /INF/i,
    negative_infinity: $ => /-INF/i,

    omega_record: $ => seq(
      alias(recordKeyword('OME', 'OMEG', 'OMEGA'), $.record_keyword),
      repeat($._omega_item),
    ),

    _omega_item: $ => choice(
      $.omega_init,
      $.block_spec,
      $.diagonal_spec,
      $.same_option,
      $.structure_option,
    ),

    omega_init: $ => seq(
      field('value', choice($.number, seq('(', $.number, optional($.fix_option), ')'))),
      optional(field('fixed', $.fix_option)),
    ),

    sigma_record: $ => seq(
      alias(recordKeyword('SIG', 'SIGM', 'SIGMA'), $.record_keyword),
      repeat($._sigma_item),
    ),

    _sigma_item: $ => choice(
      $.sigma_init,
      $.block_spec,
      $.diagonal_spec,
      $.same_option,
      $.structure_option,
    ),

    sigma_init: $ => seq(
      field('value', choice($.number, seq('(', $.number, optional($.fix_option), ')'))),
      optional(field('fixed', $.fix_option)),
    ),

    block_spec: $ => seq(alias(/BLOCK/i, $.option_name), '(', field('size', $.integer), ')'),
    diagonal_spec: $ => seq(alias(/DIAGONAL/i, $.option_name), '(', field('size', $.integer), ')'),
    fix_option: $ => /FIX(ED)?/i,
    same_option: $ => /SAME/i,
    structure_option: $ => choice(
      /STANDARD/i,
      /VARIANCE/i,
      /COVARIANCE/i,
      /CORRELAT(ION)?/i,
      /CHOLESKY/i,
      /SD/i,
      /VAR/i,
    ),

    prior_record: $ => seq(
      alias(recordKeyword('PRI', 'PRIO', 'PRIOR'), $.record_keyword),
      repeat($._prior_option),
    ),

    _prior_option: $ => choice(
      $.nwpri_option,
      $.tnpri_option,
      $.ntheta_option,
      $.neta_option,
      $.nthp_option,
      $.netp_option,
      $.plev_option,
      $.ivar_option,
    ),

    nwpri_option: $ => /NWPRI/i,
    ntheta_option: $ => seq(alias(/NTHETA/i, $.option_name), optional('='), $.integer),
    neta_option: $ => seq(alias(/NETA/i, $.option_name), optional('='), $.integer),
    thetap_record: $ => seq(
      alias(recordKeyword('THETAP'), $.record_keyword),
      repeat($.theta_init),
    ),

    thetapv_record: $ => seq(
      alias(recordKeyword('THETAPV'), $.record_keyword),
      optional(choice($.block_spec, $.diagonal_spec)),
      optional($.fix_option),
      repeat(choice($.omega_init, $.values_option)),
    ),

    values_option: $ => seq(alias(/VALUES/i, $.option_name), '(', field('value1', $.number), ',', field('value2', $.number), ')'),

    omegap_record: $ => seq(
      alias(recordKeyword('OMEGAP'), $.record_keyword),
      optional(choice($.block_spec, $.diagonal_spec)),
      optional($.fix_option),
      repeat($.omega_init),
    ),

    omegapd_record: $ => seq(
      alias(recordKeyword('OMEGAPD'), $.record_keyword),
      repeat($.omega_init),
    ),

    sigmap_record: $ => seq(
      alias(recordKeyword('SIGMAP'), $.record_keyword),
      optional(choice($.block_spec, $.diagonal_spec)),
      optional($.fix_option),
      repeat($.sigma_init),
    ),

    sigmapd_record: $ => seq(
      alias(recordKeyword('SIGMAPD'), $.record_keyword),
      repeat($.sigma_init),
    ),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
